# enzan-ai-cn-dev

./: .dockerignore  .gitignore  README.md  compare_data_sources.py  debug_api.py  debug_api_prediction_data.py  debug_data_processing.py  debug_direct_prediction_engine.py  debug_frontend_streamlit.py  debug_model_differences.py  debug_record_level.py  debug_training_details.py  docker-compose.yml  investigate_correlation_issue.py  process_each_test_results.json  real_data_comparison_test.py  simple_comparison_test.py  test_api_data_structure.py  test_data_consistency.py  test_dataset_comparison.py  test_detailed_simulation.py  test_fixed_api.py  test_frontend_integration.py  test_gui_api_comparison.py  test_metrics_fix.py  test_prediction_data.py  test_process_each.py
admin/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
admin/accounts/: admin.py  models.py  serializers.py  views.py
admin/accounts/management/commands/: create_superuser.py
admin/accounts/migrations/: 0001_initial.py
admin/common/: constant.py  format_response.py  messages.py  pagination.py  services.py  swagger.py  validators.py
admin/common/tests/: test_ordering_filter.py
admin/config/: settings.py  urls.py
admin/locations/: admin.py  models.py  serializers.py  urls.py  views.py
admin/locations/management/commands/: seed_features.py  seed_location_features.py  seed_locations.py
admin/locations/migrations/: 0001_initial.py  0002_alter_location_options_location_alert_level_and_more.py  0003_alter_feature_options_feature_parent_feature_and_more.py  0004_alter_feature_options_feature_display_order.py
ai_ameasure/: .dockerignore  .gitignore  Dockerfile  (+3 more)
backend/: .env.example  README.md  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/common/: exceptions_handler.py  helper.py  mail_services.py  ordering_filter.py
backend/config/: settings.py  urls.py
backend/group_users/: admin.py  models.py
backend/group_users/migrations/: 0001_initial.py  0002_group_projects.py
backend/projects/: admin.py  models.py  serializers.py  services.py  throttle.py  urls.py  views.py
backend/projects/management/commands/: monitor_s3_predictions.py
backend/projects/migrations/: 0001_initial.py  0002_label.py  0003_prediction_predictionresult.py  0004_alter_project_description_alter_project_ml_type_name_and_more.py  0005_alter_project_ml_type_name_and_more.py
backend/projects/tests/: conftest.py  test_auth.py  test_project_detail.py  test_project_list.py
backend/scheduler/: README.md  README_S3_MONITORING.md  __init__.py  apps.py  services.py
backend/templates/: 404.html  500.html
backend/templates/mail_templates/: confirm_password.html  forgot_password.html
(+361 files in other folders)
